// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots GridItem Should render the chart tolltip 1`] = `
<span>
  <ChartTooltip
    dailyData={
      Array [
        Object {
          "day": "1504137600000",
          "metrics": Array [
            Object {
              "diff": 179,
              "label": "Engagement average",
              "value": 1374,
            },
            Object {
              "diff": 43,
              "label": "Impression average",
              "value": 91133,
            },
            Object {
              "diff": 4,
              "label": "Click average",
              "value": 2679,
            },
          ],
        },
        Object {
          "day": "1504224000000",
          "metrics": Array [
            Object {
              "diff": -36,
              "label": "Engagement average",
              "value": 803,
            },
            Object {
              "diff": -7,
              "label": "Impression average",
              "value": 85118,
            },
            Object {
              "diff": -69,
              "label": "Click average",
              "value": 2582,
            },
          ],
        },
        Object {
          "day": "1504310400000",
          "metrics": Array [
            Object {
              "diff": -86,
              "label": "Engagement average",
              "value": 414,
            },
            Object {
              "diff": -42,
              "label": "Impression average",
              "value": 75936,
            },
            Object {
              "diff": -74,
              "label": "Click average",
              "value": 1846,
            },
          ],
        },
        Object {
          "day": "1504396800000",
          "metrics": Array [
            Object {
              "diff": -59,
              "label": "Engagement average",
              "value": 340,
            },
            Object {
              "diff": -18,
              "label": "Impression average",
              "value": 86410,
            },
            Object {
              "diff": -48,
              "label": "Click average",
              "value": 2755,
            },
          ],
        },
        Object {
          "day": "1504483200000",
          "metrics": Array [
            Object {
              "diff": -48,
              "label": "Engagement average",
              "value": 439,
            },
            Object {
              "diff": -12,
              "label": "Impression average",
              "value": 87669,
            },
            Object {
              "diff": -30,
              "label": "Click average",
              "value": 3041,
            },
          ],
        },
        Object {
          "day": "1504569600000",
          "metrics": Array [
            Object {
              "diff": -89,
              "label": "Engagement average",
              "value": 299,
            },
            Object {
              "diff": -22,
              "label": "Impression average",
              "value": 74969,
            },
            Object {
              "diff": -5,
              "label": "Click average",
              "value": 2516,
            },
          ],
        },
        Object {
          "day": "1504656000000",
          "metrics": Array [
            Object {
              "diff": -41,
              "label": "Engagement average",
              "value": 1824,
            },
            Object {
              "diff": 51,
              "label": "Impression average",
              "value": 118827,
            },
            Object {
              "diff": 49,
              "label": "Click average",
              "value": 3933,
            },
          ],
        },
      ]
    }
    point={
      Object {
        "label": "Engagement average",
        "x": 1504137600000,
        "y": 42,
      }
    }
  />
</span>
`;

exports[`Snapshots GridItem should render a grid item with a Chart if dailyData is provided 1`] = `
<span>
  <ul
    style={
      Object {
        "borderLeft": "solid 1px #ced7df",
        "borderRadius": "2px",
        "borderTop": "solid 1px #ced7df",
        "display": "flex",
        "flexWrap": "wrap",
        "margin": "0 auto",
        "padding": "0",
      }
    }
  >
    <GridItem
      dailyData={
        Array [
          Object {
            "day": "1504137600000",
            "metrics": Array [
              Object {
                "diff": 179,
                "label": "Engagement average",
                "value": 1374,
              },
              Object {
                "diff": 43,
                "label": "Impression average",
                "value": 91133,
              },
              Object {
                "diff": 4,
                "label": "Click average",
                "value": 2679,
              },
            ],
          },
          Object {
            "day": "1504224000000",
            "metrics": Array [
              Object {
                "diff": -36,
                "label": "Engagement average",
                "value": 803,
              },
              Object {
                "diff": -7,
                "label": "Impression average",
                "value": 85118,
              },
              Object {
                "diff": -69,
                "label": "Click average",
                "value": 2582,
              },
            ],
          },
          Object {
            "day": "1504310400000",
            "metrics": Array [
              Object {
                "diff": -86,
                "label": "Engagement average",
                "value": 414,
              },
              Object {
                "diff": -42,
                "label": "Impression average",
                "value": 75936,
              },
              Object {
                "diff": -74,
                "label": "Click average",
                "value": 1846,
              },
            ],
          },
          Object {
            "day": "1504396800000",
            "metrics": Array [
              Object {
                "diff": -59,
                "label": "Engagement average",
                "value": 340,
              },
              Object {
                "diff": -18,
                "label": "Impression average",
                "value": 86410,
              },
              Object {
                "diff": -48,
                "label": "Click average",
                "value": 2755,
              },
            ],
          },
          Object {
            "day": "1504483200000",
            "metrics": Array [
              Object {
                "diff": -48,
                "label": "Engagement average",
                "value": 439,
              },
              Object {
                "diff": -12,
                "label": "Impression average",
                "value": 87669,
              },
              Object {
                "diff": -30,
                "label": "Click average",
                "value": 3041,
              },
            ],
          },
          Object {
            "day": "1504569600000",
            "metrics": Array [
              Object {
                "diff": -89,
                "label": "Engagement average",
                "value": 299,
              },
              Object {
                "diff": -22,
                "label": "Impression average",
                "value": 74969,
              },
              Object {
                "diff": -5,
                "label": "Click average",
                "value": 2516,
              },
            ],
          },
          Object {
            "day": "1504656000000",
            "metrics": Array [
              Object {
                "diff": -41,
                "label": "Engagement average",
                "value": 1824,
              },
              Object {
                "diff": 51,
                "label": "Impression average",
                "value": 118827,
              },
              Object {
                "diff": 49,
                "label": "Click average",
                "value": 3933,
              },
            ],
          },
        ]
      }
      gridWidth="25%"
      metric={
        Object {
          "diff": 60,
          "label": "Engagement average",
          "value": 42,
        }
      }
      tooltip={null}
    />
  </ul>
</span>
`;

exports[`Snapshots GridItem should render a summary grid item with a neutral diff 1`] = `
<span>
  <ul
    style={
      Object {
        "borderLeft": "solid 1px #ced7df",
        "borderRadius": "2px",
        "borderTop": "solid 1px #ced7df",
        "display": "flex",
        "flexWrap": "wrap",
        "margin": "0 auto",
        "padding": "0",
      }
    }
  >
    <GridItem
      dailyData={Array []}
      gridWidth="25%"
      metric={
        Object {
          "diff": 0,
          "label": "Tweets",
          "value": 0,
        }
      }
      tooltip={null}
    />
  </ul>
</span>
`;

exports[`Snapshots GridItem should render a summary grid item with negative diff 1`] = `
<span>
  <ul
    style={
      Object {
        "borderLeft": "solid 1px #ced7df",
        "borderRadius": "2px",
        "borderTop": "solid 1px #ced7df",
        "display": "flex",
        "flexWrap": "wrap",
        "margin": "0 auto",
        "padding": "0",
      }
    }
  >
    <GridItem
      dailyData={Array []}
      gridWidth="25%"
      metric={
        Object {
          "diff": -60,
          "label": "Tweets",
          "value": 10,
        }
      }
      tooltip={null}
    />
  </ul>
</span>
`;

exports[`Snapshots GridItem should render a summary grid item with positive diff 1`] = `
<span>
  <ul
    style={
      Object {
        "borderLeft": "solid 1px #ced7df",
        "borderRadius": "2px",
        "borderTop": "solid 1px #ced7df",
        "display": "flex",
        "flexWrap": "wrap",
        "margin": "0 auto",
        "padding": "0",
      }
    }
  >
    <GridItem
      dailyData={Array []}
      gridWidth="25%"
      metric={
        Object {
          "diff": 50,
          "label": "Tweets",
          "value": 150,
        }
      }
      tooltip={null}
    />
  </ul>
</span>
`;

exports[`Snapshots PeriodPhrase should render 1`] = `
<span>
  <PeriodPhrase
    endDate={1504826680}
    startDate={1504308280}
  />
</span>
`;

exports[`Snapshots ProfileBadge should render 1`] = `
<span>
  <ProfileBadge
    avatarSize={32}
    avatarUrl="https://scontent.xx.fbcdn.net/v/t1.0-1/p50x50/10403026_1055367724535674_7855796462569708170_n.png?oh=2915a2a2325889aae802fd762d081f27&oe=5A2C3281"
    service="facebook"
    socialIconSize={16}
  />
</span>
`;

exports[`Snapshots SocialIcon should render 1`] = `
<span>
  <SocialIcon
    avatarSize={32}
    service="facebook"
    socialIconSize={16}
  />
</span>
`;
